Handle defiend some migrations and models

--- a/db.migrations/config/config.json
+++ b/db.migrations/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": "123456",
-    "database": "db",
-    "host": "127.0.0.1",
+    "password": "12345678x@X",
+    "database": "DeliveryShipping",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
