add role for user  when create a user

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
     "start-gg-drive": "nodemon gg.drive.api.js",
-    "migration": "npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate"
+    "migration": "npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate",
+    "seed": "npx sequelize-cli db:seed:undo:all && npx sequelize-cli db:seed:all"
   },
   "author": "",
   "license": "ISC",
