--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "multiparty": "^4.2.1",
     "mysql2": "^2.1.0",
     "node-cron": "^2.0.3",
+    "nodemailer": "^6.6.5",
     "nodemon": "^2.0.2",
     "rmdir": "^1.2.0",
     "sequelize": "^6.6.5",
