--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.5",
     "copy-dir": "^1.3.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "decompress": "^4.2.1",
     "drive-url": "^1.0.0",
     "express": "^4.17.1",
