--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.10.7",
     "decompress": "^4.2.1",
     "drive-url": "^1.0.0",
+    "exceljs": "^4.3.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "express-rate-limit": "^5.1.3",
