--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "async": "^3.2.0",
     "await-spawn": "^3.0.0",
+    "axios": "^0.23.0",
     "body-parser": "1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
